# Tarefa29_01A1

./: CMakeLists.txt  README.md  Tarefa29d01.c  diagram.json  wokwi.toml
